[package]
name = "large_file_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
memmap2 = "0.9"
serde_json = "1"
ureq = { version = "3", features = ["json"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[[bin]]
name = "lfv"
path = "src/main.rs"
